--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to My Solo Portfolio Hub</h1>
     <p>This is a collaborative-style portfolio showcasing my personal projects and skills.</p>
 
-    <h2 a="https://www.linkedin.com/in/ali-pourrahim/">Portfolio Link</h2>
+    <h2 <a href="https://www.linkedin.com/in/ali-pourrahim/"> >Portfolio Link</h2>
     <ul>
         <li>
             <strong>My Personal Portfolio</strong><br>
