--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <h1>Welcome to My Solo Portfolio Hub</h1>
     <p>This is a collaborative-style portfolio showcasing my personal projects and skills.</p>
 
-    <h2 <a href="https://www.linkedin.com/in/ali-pourrahim/"> >Portfolio Link</h2>
+    <h2>Portfolio Link</h2>
+    <p>
+        <a href="https://www.linkedin.com/in/ali-pourrahim/" target="_blank">Visit My LinkedIn</a>
+    </p>
+
     <ul>
         <li>
             <strong>My Personal Portfolio</strong><br>
